unidad07/yaml/02.Parte_1_2_service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: reservas-segmentado-u7
  name: service-backend
  labels:
    app: reservas
    module: reservas-bk
    tier: backend
spec:
  type: ClusterIP
  selector:
      app: reservas
      module: reservas-bk
      tier: backend
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000
