unidad07/yaml/03.Parte_1_2_service_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: reservas-segmentado-u7
  name: service-frontend
  labels:
    app: reservas
    module: reservas-fe
    tier: frontend
spec:
  type: ClusterIP
  selector:
      app: reservas
      module: reservas-fe
      tier: frontend
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
