unidad07/yaml/04.Parte_1_2_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: reservas-segmentado-u7
 # annotations:
  #  kubernetes.io/ingress.class: public
  labels:
    app: reservas
    module: reservas-fe
    tier: frontend
spec:
  rules:
  - host: awesome-hotels.internal.itrip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-frontend
            port: 
              number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: reservas-segmentado-u7
 # annotations:
  #  kubernetes.io/ingress.class: public
  labels:
    app: reservas
    module: reservas-bk
    tier: backend
spec:
  rules:
  - host: api-hotels.internal.itrip.io
    http:
      paths:
      - path: /hotels
        pathType: Exact
        backend:
          service:
            name: service-backend
            port: 
              number: 80
